@@ -1,0 +1,5 @@
+#!/bin/bash
+
+echo shutdown | nc 127.0.0.1 1111
+
+exit
